[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybertools-vessel"
version = "1.1.0"
description = "Global CLI for CyberTools API — recon, subdomain enum, payload gen, and more for bug bounty hunters"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "vessel-69", email = "vessel@cybertools.dev" }]
requires-python = ">=3.10"
keywords = [
    "bug bounty", "recon", "security", "red team", "pentesting",
    "subdomain", "payload", "xss", "sqli", "ssrf", "cli", "cybersecurity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = []  # stdlib only — no extra installs needed

[project.urls]
Homepage    = "https://www.cyber-tools.dev"
Repository  = "https://github.com/vessel-69/cybertools-vessel"
"API Docs"  = "https://www.cyber-tools.dev/docs"
Issues      = "https://github.com/vessel-69/cybertools-vessel/issues"

[project.scripts]
cybtl = "cybertools_vessel.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cybertools_vessel*"]